# golgotelu

./: main.py  pyproject.toml  songs_data.json
backend/: .gitignore  main.py  pyproject.toml  songs_data.json
backend/api/: api.py
backend/utils/: data_loader.py  env_loader.py
backend/utils/PROMPTS/: ai_prompt.py  user_prompt.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: Api.tsx
utils/: data_loader.py  song_processor.py
utils/PROMPTS/: ai_prompt.py  user_prompt.py
utils/file_processors/: ppt.py
